Cleaned requirements.txt: removed standard libs, fixed dotenv

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,9 @@ pandas
 numpy
 seaborn
 matplotlib
-zipfile
-sys
-os
 streamlit
-datetime
-math
 joblib
-logging
 xgboost
-sklearn
+scikit-learn
 requests
-re
-dotenv
+python-dotenv
